--- a/fancontrol/app/src/main/res/layout/activity_settings.xml
+++ b/fancontrol/app/src/main/res/layout/activity_settings.xml
@@ -25,6 +25,52 @@
             android:gravity="top"
             android:id="@+id/settings_layout">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:text="FAN CONTROL"
+                android:textSize="20sp"
+                android:layout_marginTop="50dp"
+                android:layout_marginLeft="50dp"/>
+
+            <SeekBar
+                android:id="@+id/fan_speed"
+                android:max="100"
+                android:progress="50"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp"
+                android:progressDrawable="@drawable/slider_bar"
+                android:thumb="@drawable/slider_thumb"
+                android:splitTrack="false"
+                android:thumbOffset="0dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:text="SPRAY PERIOD"
+                android:textSize="20sp"
+                android:layout_marginTop="70dp"
+                android:layout_marginLeft="50dp"/>
+
+            <SeekBar
+                android:id="@+id/spray_period"
+                android:max="100"
+                android:progress="50"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="10dp"
+                android:progressDrawable="@drawable/slider_bar"
+                android:thumb="@drawable/slider_thumb"
+                android:splitTrack="false"
+                android:thumbOffset="0dp" />
+
         </LinearLayout>
     </FrameLayout>
 
