--- a/fancontrol/app/src/main/res/layout/activity_main.xml
+++ b/fancontrol/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.idevicesinc.fancontrol.MainActivity" -->
-
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
@@ -23,9 +16,9 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:scaleType="center"
-            android:src="@drawable/wind"
+            android:src="@drawable/sunset"
             android:layout_weight="1"
-            android:id="@+id/wind_button"
+            android:id="@+id/sunset_button"
             android:clickable="true"
             />
 
@@ -43,9 +36,9 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:scaleType="center"
-            android:src="@drawable/mountains"
+            android:src="@drawable/forest"
             android:layout_weight="1"
-            android:id="@+id/mountains_button"
+            android:id="@+id/forest_button"
             android:clickable="true"
             />
 
@@ -61,4 +54,3 @@
 
 
 </android.support.v4.widget.DrawerLayout>
-<!-- /android.support.constraint.ConstraintLayout -->
