added secret configuratio activity.

--- a/fancontrol/app/src/main/res/menu/drawer_menu.xml
+++ b/fancontrol/app/src/main/res/menu/drawer_menu.xml
@@ -2,13 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/foo"
-            android:title="foo" />
-        <item
-            android:id="@+id/bar"
-            android:title="bar" />
-        <item
-            android:id="@+id/baz"
-            android:title="baz" />
+            android:id="@+id/item_settings"
+            android:title="Settings" />
     </group>
 </menu>
