drawer menu item now gets unchecked onResume of main activity

--- a/fancontrol/app/src/main/res/menu/drawer_menu.xml
+++ b/fancontrol/app/src/main/res/menu/drawer_menu.xml
@@ -3,6 +3,6 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/item_settings"
-            android:title="Settings" />
+            android:title="settings" />
     </group>
 </menu>
