--- a/fancontrol/app/src/main/res/layout/activity_loading.xml
+++ b/fancontrol/app/src/main/res/layout/activity_loading.xml
@@ -10,11 +10,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
+        <!-- MONKEY: TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="loading..."
             android:textSize="20sp"
+            android:layout_gravity="center" /-->
+        <ProgressBar
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            style="?android:attr/progressBarStyle"
             android:layout_gravity="center" />
 
     </FrameLayout>
