--- a/fancontrol/app/src/main/res/layout/activity_settings.xml
+++ b/fancontrol/app/src/main/res/layout/activity_settings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -91,10 +91,10 @@
                     android:layout_gravity="center"
                     android:src="@drawable/color_picker_ring"/>
 
-                <com.skydoves.colorpickerpreference.ColorPickerView
+                <com.skydoves.colorpickerview.ColorPickerView
                     android:id="@+id/colorPickerView"
-                    android:layout_width="170dp"
-                    android:layout_height="170dp"
+                    android:layout_width="190dp"
+                    android:layout_height="190dp"
                     app:palette="@drawable/palette"
                     app:selector="@drawable/wheel"
                     android:layout_gravity="center" />
@@ -104,4 +104,4 @@
         </LinearLayout>
     </FrameLayout>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
